--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "sass": "^1.72.0",
+    "sass-loader": "^14.1.1",
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
