--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
+    "@rocketseat/eslint-config": "^2.2.2",
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
+    "eslint": "^9.0.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "html-webpack-plugin": "^5.6.0",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
