--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["@rocketseat/eslint-config/react"],
-  "plugins": ["simple-import-sort"],
+  "plugins": ["simple-import-sort", "react"],
   "rules": {
     "simple-import-sort/imports": "error"
   }
