--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@eslint/js": "^9.0.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@rocketseat/eslint-config": "^2.2.2",
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
@@ -32,6 +33,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "globals": "^15.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "react-refresh": "^0.14.0",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
     "style-loader": "^3.3.4",
